Finish results for all viewports

--- a/search.html
+++ b/search.html
@@ -134,12 +134,12 @@
                     </div>
                 </div>
                 <div class="bg-light col-12 flex border-bottom border-2 py-1 my-1">
-                    <div class="results-img results-img-2 ms-2">
+                    <div class="results-img results-img-3 ms-2">
                     </div>
                     <div class="m-3 search-txt-div d-flex flex-column justify-content-between">
-                        <p class="fs-1 lh-1 color-black font-2 my-1">Bloons TD 6</p>
+                        <p class="fs-1 lh-1 color-black font-2 my-1">Dying Light</p>
                         <p class="color-grey fs-6 lh-1 font-2">From: <span class="color-black">Steam</span></p>
-                        <p class="font-1 result-txt">The Bloons are back and better than ever! Get ready for a massive 3D tower defense game designed to give you hours and hours of the best strategy gaming available.</p>
+                        <p class="font-1 result-txt">First-person action survival game set in a post-apocalyptic open world overrun by flesh-hungry zombies. Roam a city devastated by a mysterious virus epidemic. Scavenge for supplies, craft weapons, and face hordes of the infected.</p>
                         <div class="d-flex justify-content-between align-items-end">
                         <i class="bi bi-plus-square color-grey fs-4 plus-hover"></i>
                         <p class="fs-4 m-0 color-white badge bg-red">20$</p>
@@ -147,12 +147,12 @@
                     </div>
                 </div>
                 <div class="bg-light col-12 flex border-bottom border-2 py-1 my-1">
-                    <div class="results-img results-img-2 ms-2">
+                    <div class="results-img results-img-4 ms-2">
                     </div>
                     <div class="m-3 search-txt-div d-flex flex-column justify-content-between">
-                        <p class="fs-1 lh-1 color-black font-2 my-1">Bloons TD 6</p>
+                        <p class="fs-1 lh-1 color-black font-2 my-1">Flight Simulator</p>
                         <p class="color-grey fs-6 lh-1 font-2">From: <span class="color-black">Steam</span></p>
-                        <p class="font-1 result-txt">The Bloons are back and better than ever! Get ready for a massive 3D tower defense game designed to give you hours and hours of the best strategy gaming available.</p>
+                        <p class="font-1 result-txt">From light planes to wide-body jets, fly highly detailed and accurate aircraft in the next generation of Microsoft Flight Simulator. Test your piloting skills against the challenges of night flying, real-time atmospheric simulation and live weather in a dynamic and living world.</p>
                         <div class="d-flex justify-content-between align-items-end">
                         <i class="bi bi-plus-square color-grey fs-4 plus-hover"></i>
                         <p class="fs-4 m-0 color-white badge bg-red">20$</p>
@@ -160,12 +160,12 @@
                     </div>
                 </div>
                 <div class="bg-light col-12 flex border-bottom border-2 py-1 my-1">
-                    <div class="results-img results-img-2 ms-2">
+                    <div class="results-img results-img-5 ms-2">
                     </div>
                     <div class="m-3 search-txt-div d-flex flex-column justify-content-between">
-                        <p class="fs-1 lh-1 color-black font-2 my-1">Bloons TD 6</p>
+                        <p class="fs-1 lh-1 color-black font-2 my-1">GTA V</p>
                         <p class="color-grey fs-6 lh-1 font-2">From: <span class="color-black">Steam</span></p>
-                        <p class="font-1 result-txt">The Bloons are back and better than ever! Get ready for a massive 3D tower defense game designed to give you hours and hours of the best strategy gaming available.</p>
+                        <p class="font-1 result-txt">Grand Theft Auto V for PC offers players the option to explore the award-winning world of Los Santos and Blaine County in resolutions of up to 4k and beyond, as well as the chance to experience the game running at 60 frames per second.</p>
                         <div class="d-flex justify-content-between align-items-end">
                         <i class="bi bi-plus-square color-grey fs-4 plus-hover"></i>
                         <p class="fs-4 m-0 color-white badge bg-red">20$</p>
@@ -173,12 +173,12 @@
                     </div>
                 </div>
                 <div class="bg-light col-12 flex border-bottom border-2 py-1 my-1">
-                    <div class="results-img results-img-2 ms-2">
+                    <div class="results-img results-img-6 ms-2">
                     </div>
                     <div class="m-3 search-txt-div d-flex flex-column justify-content-between">
-                        <p class="fs-1 lh-1 color-black font-2 my-1">Bloons TD 6</p>
+                        <p class="fs-1 lh-1 color-black font-2 my-1">Hades</p>
                         <p class="color-grey fs-6 lh-1 font-2">From: <span class="color-black">Steam</span></p>
-                        <p class="font-1 result-txt">The Bloons are back and better than ever! Get ready for a massive 3D tower defense game designed to give you hours and hours of the best strategy gaming available.</p>
+                        <p class="font-1 result-txt">Defy the god of the dead as you hack and slash out of the Underworld in this rogue-like dungeon crawler from the creators of Bastion, Transistor, and Pyre.</p>
                         <div class="d-flex justify-content-between align-items-end">
                         <i class="bi bi-plus-square color-grey fs-4 plus-hover"></i>
                         <p class="fs-4 m-0 color-white badge bg-red">20$</p>
@@ -186,12 +186,12 @@
                     </div>
                 </div>
                 <div class="bg-light col-12 flex border-bottom border-2 py-1 my-1">
-                    <div class="results-img results-img-2 ms-2">
+                    <div class="results-img results-img-7 ms-2">
                     </div>
                     <div class="m-3 search-txt-div d-flex flex-column justify-content-between">
-                        <p class="fs-1 lh-1 color-black font-2 my-1">Bloons TD 6</p>
+                        <p class="fs-1 lh-1 color-black font-2 my-1">LoopHero</p>
                         <p class="color-grey fs-6 lh-1 font-2">From: <span class="color-black">Steam</span></p>
-                        <p class="font-1 result-txt">The Bloons are back and better than ever! Get ready for a massive 3D tower defense game designed to give you hours and hours of the best strategy gaming available.</p>
+                        <p class="font-1 result-txt">The Lich has thrown the world into a timeless loop and plunged its inhabitants into never ending chaos. Wield an expanding deck of mystical cards to place enemies, buildings, and terrain along each unique expedition loop for the brave hero.</p>
                         <div class="d-flex justify-content-between align-items-end">
                         <i class="bi bi-plus-square color-grey fs-4 plus-hover"></i>
                         <p class="fs-4 m-0 color-white badge bg-red">20$</p>
@@ -199,12 +199,12 @@
                     </div>
                 </div>
                 <div class="bg-light col-12 flex border-bottom border-2 py-1 my-1">
-                    <div class="results-img results-img-2 ms-2">
+                    <div class="results-img results-img-8 ms-2">
                     </div>
                     <div class="m-3 search-txt-div d-flex flex-column justify-content-between">
-                        <p class="fs-1 lh-1 color-black font-2 my-1">Bloons TD 6</p>
+                        <p class="fs-1 lh-1 color-black font-2 my-1">Monster Hunter World</p>
                         <p class="color-grey fs-6 lh-1 font-2">From: <span class="color-black">Steam</span></p>
-                        <p class="font-1 result-txt">The Bloons are back and better than ever! Get ready for a massive 3D tower defense game designed to give you hours and hours of the best strategy gaming available.</p>
+                        <p class="font-1 result-txt">Welcome to a new world! In Monster Hunter: World, the latest installment in the series, you can enjoy the ultimate hunting experience, using everything at your disposal to hunt monsters in a new world teeming with surprises and excitement.</p>
                         <div class="d-flex justify-content-between align-items-end">
                         <i class="bi bi-plus-square color-grey fs-4 plus-hover"></i>
                         <p class="fs-4 m-0 color-white badge bg-red">20$</p>
@@ -212,12 +212,12 @@
                     </div>
                 </div>
                 <div class="bg-light col-12 flex border-bottom border-2 py-1 my-1">
-                    <div class="results-img results-img-2 ms-2">
+                    <div class="results-img results-img-9 ms-2">
                     </div>
                     <div class="m-3 search-txt-div d-flex flex-column justify-content-between">
-                        <p class="fs-1 lh-1 color-black font-2 my-1">Bloons TD 6</p>
+                        <p class="fs-1 lh-1 color-black font-2 my-1">Stardew Valley</p>
                         <p class="color-grey fs-6 lh-1 font-2">From: <span class="color-black">Steam</span></p>
-                        <p class="font-1 result-txt">The Bloons are back and better than ever! Get ready for a massive 3D tower defense game designed to give you hours and hours of the best strategy gaming available.</p>
+                        <p class="font-1 result-txt">You've inherited your grandfather's old farm plot in Stardew Valley. Armed with hand-me-down tools and a few coins, you set out to begin your new life. Can you learn to live off the land and turn these overgrown fields into a thriving home?</p>
                         <div class="d-flex justify-content-between align-items-end">
                         <i class="bi bi-plus-square color-grey fs-4 plus-hover"></i>
                         <p class="fs-4 m-0 color-white badge bg-red">20$</p>
@@ -225,12 +225,12 @@
                     </div>
                 </div>
                 <div class="bg-light col-12 flex border-bottom border-2 py-1 my-1">
-                    <div class="results-img results-img-2 ms-2">
+                    <div class="results-img results-img-0 ms-2">
                     </div>
                     <div class="m-3 search-txt-div d-flex flex-column justify-content-between">
-                        <p class="fs-1 lh-1 color-black font-2 my-1">Bloons TD 6</p>
+                        <p class="fs-1 lh-1 color-black font-2 my-1">Terraria</p>
                         <p class="color-grey fs-6 lh-1 font-2">From: <span class="color-black">Steam</span></p>
-                        <p class="font-1 result-txt">The Bloons are back and better than ever! Get ready for a massive 3D tower defense game designed to give you hours and hours of the best strategy gaming available.</p>
+                        <p class="font-1 result-txt">Dig, fight, explore, build! Nothing is impossible in this action-packed adventure game. Four Pack also available!</p>
                         <div class="d-flex justify-content-between align-items-end">
                         <i class="bi bi-plus-square color-grey fs-4 plus-hover"></i>
                         <p class="fs-4 m-0 color-white badge bg-red">20$</p>
@@ -267,7 +267,7 @@
                     </div>
                 </div>
             </div>
-            <div class="d-none d-md-grid col-md-3 ms-2">
+            <div class="d-none d-md-grid col-md-5 col-lg-3 ms-2">
                 <div class="row">
                     <div class="d-flex flex-column col align-items-center ">
                         <div class="row col-4">
