Add path to header nav home and collection

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
             </div>
             <div class="nav-2">
                 <div>
-                    <a href="#" class="color-grey text-decoration-none link-hover"><i class="bi bi-house-door-fill color-grey me-1"></i>Home</a>
+                    <a href="index.html" class="color-grey text-decoration-none link-hover"><i class="bi bi-house-door-fill color-grey me-1"></i>Home</a>
                 </div>
                 <div>
-                    <a href="#" class="color-grey text-decoration-none link-hover"><i class="bi bi-grid-fill color-grey me-1"></i>Collection</a>
+                    <a href="search.html" class="color-grey text-decoration-none link-hover"><i class="bi bi-grid-fill color-grey me-1"></i>Collection</a>
                 </div>
                 <div>
                     <a href="#" class="color-grey text-decoration-none link-hover"><i class="bi bi-cart-fill color-grey me-1"></i>Purchase List</a>
