--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
             </section>
     </main>
     <!-- Footer -->
-    <footer class="bg-light">
+    <footer class="bg-light m-0">
         <nav class="row">
             <div class="d-none d-md-grid col-md ms-2">
                 <h3 class="color-red footer-title">Categories</h3>
