--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   </head>
   <body class="bg-light-grey m-0">
     <!-- Header -->
-    <header>
-        <nav class="nav row">
+    <header class="width-100">
+        <nav class="nav p-0">
             <div class="nav-1">
                 <i class="bi bi-box-seam color-red me-1"></i>
                 <h2 class="text-light font-1 mt-2">FICTIONAL</h2>
@@ -33,7 +33,7 @@
                     <a href="#" class="color-grey text-decoration-none link-hover"><i class="bi bi-cart-fill color-grey me-1"></i>Purchase List</a>
                 </div>
             </div>
-            <div class="nav-3 d-none d-md-flex">
+            <div class="nav-3 d-none d-md-flex p-0">
                 <a href="#" class="color-grey text-decoration-none badge rounded-1 nav-btn-hover">POST AN AD</a>
             </div>
             <div class="nav-4 d-none d-lg-flex">
@@ -45,11 +45,10 @@
                     <i class="bi bi-person-check-fill color-grey"></i>
                     <a class="color-grey text-decoration-none link-hover" href="#">Sign In</a>
                 </div>
-                
             </div>
         </nav>
         <!-- Ipad/Desktop searchbar -->
-        <section class="row">
+        <section>
             <div class="bg-red d-none d-md-flex flex-column align-items-center">
                 <div class="text-center pt-5">
                     <h1 class="text-light fw-bold">FICTIONAL</h1>
@@ -69,16 +68,16 @@
             </div>
         </section>
     </header>
-    <main class="bg-light-grey row">
+    <main class="bg-light-grey">
         <!-- Ipad/Desktop HOT ADS -->
-        <section>
+        <section class="p-0">
             <div class="ms-5 d-none d-md-flex">
                 <h2 class="color-black ms-5">HOT ADS</h2>
             </div>
-            <div class="d-none d-md-flex mx-3">
+            <div class="d-none d-md-flex">
                 <a href="#" class="text-decoration-none align-self-center me-5 hot-ads-hover"><i class="bi bi-caret-left d-none d-md-grid fs-1 color-red"></i></a>
                 <div class="bg-light border border-1 row">
-                    <div class="col-md-6 hot-ads-img">
+                    <div class="col-md-6 hot-ads-img m-0">
                     </div>
                     <div class="col-6 d-flex flex-column justify-content-between">
                         <h2 class="h1 lh-1 color-black font-1 my-4">Sekiro - Shadows Die Twice</h2>
@@ -317,8 +316,8 @@
         </section>
     </main>
     <!-- Footer -->
-    <footer class="bg-light m-0 row">
-        <nav class="row">
+    <footer class="bg-light m-0 row width-100">
+        <nav>
             <div class="d-none d-md-grid col-md ms-2">
                 <h3 class="color-red footer-title">Categories</h3>
                 <div class="row">
@@ -380,12 +379,12 @@
                     Designed by <a class="text-decoration-none link-hover color-black" href="https://github.com/jmontanholi">João Vítor Montanholi</a> 
                 </p>
             </div>
-            <div class="d-none d-md-flex fs-4">
+            <div class="d-none d-md-flex fs-4 p-0 m-0">
                 <a class="color-grey" href="#"><i class="bi bi-facebook m-1 link-hover"></i></a>
                 <a class="color-grey" href="#"><i class="bi bi-twitter m-1 link-hover"></i></a>
                 <a class="color-grey" href="#"><i class="bi bi-twitch m-1 link-hover"></i></a>
                 <a class="color-grey" href="#"><i class="bi bi-camera-fill m-1 link-hover"></i></a>
-                <a class="color-grey" href="#"><i class="bi bi-linkedin m-1 me-3 link-hover"></i></a>
+                <a class="color-grey" href="#"><i class="bi bi-linkedin m-1 me-3 link-hover p-0"></i></a>
             </div>
         </div>
     </footer>
