Fix footer error on the positioning

--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
     </main>
     <!-- Footer -->
     <footer class="bg-light m-0 row width-100">
-        <nav>
+        <nav class="row">
             <div class="d-none d-md-grid col-md ms-2">
                 <h3 class="color-red footer-title">Categories</h3>
                 <div class="row">
@@ -379,12 +379,12 @@
                     Designed by <a class="text-decoration-none link-hover color-black" href="https://github.com/jmontanholi">João Vítor Montanholi</a> 
                 </p>
             </div>
-            <div class="d-none d-md-flex fs-4 p-0 m-0">
+            <div class="d-none d-md-flex fs-4">
                 <a class="color-grey" href="#"><i class="bi bi-facebook m-1 link-hover"></i></a>
                 <a class="color-grey" href="#"><i class="bi bi-twitter m-1 link-hover"></i></a>
                 <a class="color-grey" href="#"><i class="bi bi-twitch m-1 link-hover"></i></a>
                 <a class="color-grey" href="#"><i class="bi bi-camera-fill m-1 link-hover"></i></a>
-                <a class="color-grey" href="#"><i class="bi bi-linkedin m-1 me-3 link-hover p-0"></i></a>
+                <a class="color-grey" href="#"><i class="bi bi-linkedin m-1 me-3 link-hover"></i></a>
             </div>
         </div>
     </footer>
